Fix #2924 Top bar & menu Create a top bar with menu like the one on apple.com when viewed on a phone. Instead of black lets make it the same blue as our buttons. Ideally slightly semitransparent. Flat/2D like Apple's. For the menu use the same fonts and spacing For now just list these:

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -327,6 +327,156 @@ md-list.tickets-group {
 	width: 75px;
 }
 
+.main-nav {
+	padding: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
+
+@media only screen and (max-width: 414px) {
+	.main-nav {
+		display: block;
+	}
+
+	.layout-margin.main-panel {
+		padding-top: 50px;
+	}
+}
+
+.main-nav .header {
+	background: hsla(205, 100%, 35%, 0.97);
+	position: absolute;
+	z-index: 3;
+	top: -7px;
+	left: 0;
+	width: 100%;
+	height: 48px;
+	overflow: hidden
+}
+
+.ac-gn-list {
+	background: hsla(205, 100%, 35%, 0.97);
+	list-style: none;
+	position: absolute;
+	z-index: 2;
+	top: 41px;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: 0;
+	padding: 0 48px;
+	height: auto;
+	box-sizing: border-box;
+	overflow: hidden;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
+	visibility: hidden;
+	-webkit-transition: visibility 0s linear 1s, transform 0.35s ease-out;
+	transition: visibility 0s linear 1s, transform 0.35s ease-out;
+	padding-top: 15px;
+	transform: translateY(-100%);
+
+}
+
+.ac-gn-list.active {
+	visibility: visible;
+	-webkit-transition-delay: 0s;
+	transition-delay: 0s;
+	transform: translateY(0);
+}
+
+.ac-gn-list  li {
+	height: 80px;
+	border-bottom: 1px solid rgba(236, 236, 236, 0.33);
+	opacity: 0;
+	pointer-events: none;
+	-webkit-transform: scale(1.1) translateY(-24px);
+	-ms-transform: scale(1.1) translateY(-24px);
+	transform: scale(1.1) translateY(-24px);
+	-webkit-transition: opacity 0.35s ease-out, -webkit-transform 0.35s ease-out;
+	transition: opacity 0.35s ease-out, -webkit-transform 0.35s ease-out;
+	transition: opacity 0.35s ease-out, transform 0.35s ease-out;
+	transition: opacity 0.35s ease-out, transform 0.35s ease-out, -webkit-transform 0.35s ease-out
+}
+
+
+.ac-gn-list.active .ac-gn-item-menu:nth-child(1) {
+	opacity: 1;
+	-webkit-transform: none;
+	-ms-transform: none;
+	transform: none
+	-webkit-transition-delay: 450ms, 450ms;
+	transition-delay: 450ms, 450ms
+}
+
+.ac-gn-list.active .ac-gn-item-menu:nth-child(2) {
+	opacity: 1;
+	-webkit-transform: none;
+	-ms-transform: none;
+	transform: none
+	-webkit-transition-delay: 400ms, 400ms;
+	transition-delay: 400ms, 400ms
+}
+
+.ac-gn-list.active  .ac-gn-item-menu:nth-child(3) {
+	opacity: 1;
+	-webkit-transform: none;
+	-ms-transform: none;
+	transform: none
+	-webkit-transition-delay: 350ms, 350ms;
+	transition-delay: 350ms, 350ms
+}
+
+.ac-gn-list.active .ac-gn-item-menu:nth-child(4) {
+	opacity: 1;
+	-webkit-transform: none;
+-ms-transform: none;
+transform: none
+    -webkit-transition-delay: 300ms, 300ms;
+    transition-delay: 300ms, 300ms
+}
+
+.ac-gn-list  li a {
+	font-size: 20px;
+	line-height: 2.35;
+	font-weight: 300;
+	letter-spacing: normal;
+	color: white;
+	text-decoration: none;
+	display: block;
+}
+
+.ac-gn-list  li a:hover {
+	color: white;
+}
+
+.ac-gn-list li .title {
+    position: absolute;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+.game-icon {
+	width: 75px;
+}
+
+
+
+.md-button.md-icon-button.toggle-menu {
+	margin-top: 5px;
+}
+
+.md-button.toggle-menu:not([disabled]):hover {
+	background: none;
+}
+
+.toggle-menu svg {
+	fill: white;
+}
 
 
 /* start material overrides */
